<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FirstActivity">

    <TextView
        android:id="@+id/groww_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/open_sans_extrabold"
        android:gravity="center"
        android:text="GROWW"
        android:textColor="@color/black"
        android:textSize="27dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/groww1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groww_title" />

    <TextView
        android:id="@+id/invest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center"
        android:text="@string/best_way_to_invest_your_money"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/sign_up_ripple"
        android:fontFamily="@font/open_sans_semibold"
        android:onClick="gotosignuppage"
        android:text="@string/sign_up_using_email_and_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invest" />

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/sign_in_ripple"
        android:fontFamily="@font/open_sans_semibold"
        android:onClick="gotosigninpage"
        android:text="@string/sign_in_using_email_and_password"
        android:textAllCaps="false"
        android:textColor="@color/sign_up_button"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_btn" />

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        android:gravity="center"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/linearLayout"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent">-->

<!--        <View-->
<!--            android:layout_width="80dp"-->
<!--            android:layout_height="1dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:background="@color/black"-->
<!--            android:layout_marginEnd="8dp"/>-->
<!--        <TextView-->
<!--            android:id="@+id/or"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:fontFamily="@font/open_sans"-->
<!--            android:gravity="center"-->
<!--            android:text="@string/or"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="14sp" />-->

<!--        <View-->
<!--            android:layout_width="80dp"-->
<!--            android:layout_height="1dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:background="@color/black"-->
<!--            android:layout_marginStart="8dp"/>-->

<!--    </LinearLayout>-->

<!--    <LinearLayout-->
<!--        android:id="@+id/linearLayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="20dp"-->
<!--        android:gravity="center"-->
<!--        android:orientation="horizontal"-->
<!--        android:padding="10dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent">-->

<!--        <ImageButton-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="5dp"-->
<!--            android:layout_weight="1"-->
<!--            android:background="@drawable/ripple"-->
<!--            android:contentDescription="@string/app_name"-->
<!--            android:src="@drawable/google_icon" />-->

<!--        <ImageButton-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="5dp"-->
<!--            android:layout_weight="1"-->
<!--            android:background="@drawable/ripple"-->
<!--            android:contentDescription="@string/app_name"-->
<!--            android:src="@drawable/facebook_icon" />-->

<!--        <ImageButton-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="5dp"-->
<!--            android:layout_weight="1"-->
<!--            android:background="@drawable/ripple"-->
<!--            android:contentDescription="@string/app_name"-->
<!--            android:src="@drawable/phone_icon" />-->

<!--        <ImageButton-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="5dp"-->
<!--            android:layout_weight="1"-->
<!--            android:background="@drawable/ripple"-->
<!--            android:contentDescription="@string/app_name"-->
<!--            android:src="@drawable/twitter_icon" />-->

<!--        <ImageButton-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="5dp"-->
<!--            android:layout_weight="1"-->
<!--            android:background="@drawable/ripple"-->
<!--            android:contentDescription="@string/app_name"-->
<!--            android:src="@drawable/github_icon" />-->

<!--    </LinearLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>